# codex

.github/workflows/: external-adapter-e2e.yml  rust-debug-build.yml
codex-rs/: Cargo.toml
codex-rs/app-server-protocol/src/: lib.rs
codex-rs/app-server-protocol/src/protocol/: external_control.rs  mod.rs
codex-rs/core/src/: apply_patch.rs  client_common.rs  exec.rs  exec_policy.rs  lib.rs
codex-rs/core/src/tools/: orchestrator.rs  spec.rs
codex-rs/core/src/tools/runtimes/: apply_patch.rs
codex-rs/external-adapter/: Cargo.toml
codex-rs/external-adapter/src/: main.rs
codex-rs/external-adapter/tests/: adapter_e2e.rs
scripts/: run_external_adapter_ci.sh
